Generalize for other object types

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+OBJECT=cup
 FRAME_SKIP=10
 DETECTION_TIME=300
 MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine before it gets cold :)
