--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 OBJECT=cup
+MIN_CONFIDENCE=0.5
 FRAME_SKIP=10
 DETECTION_TIME=300
-MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine before it gets cold :)
-WEBHOOK_URL=https://your-google-chat-webhook-url
+MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine :)
+WEBHOOK_URL=https://your-webhook-url
