--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
+BOT_WEBHOOK_URL=https://your-webhook-url
+BOT_MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine :)
 OBJECT=cup
 MIN_CONFIDENCE=0.5
 FRAME_SKIP=10
 DETECTION_TIME=300
-MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine :)
-WEBHOOK_URL=https://your-webhook-url
