--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 BOT_WEBHOOK_URL=https://your-webhook-url
 BOT_MESSAGE=Coffee cup left unattended! Please remove it from the coffee machine :)
-OBJECT=cup # object to detect
-MIN_CONFIDENCE=0.5 # minimum confidence level for object detection
-FRAME_SKIP=5 # number of frames to skip before checking for object
-DETECTION_TIME=300 # in seconds
-CAPTURE_DEVICE=0 # 0 for default webcam, 1 for USB webcam
-SAVE_DIR=/tmp # directory to save images
+OBJECT=cup
+MIN_CONFIDENCE=0.5
+FRAME_SKIP=5
+DETECTION_TIME=300
+CAPTURE_DEVICE=0
+SAVE_DIR=/tmp/coffeebot
